--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,40 @@ verify_ssl = true
 pylint = "*"
 
 [packages]
+aiohttp = "==3.4.4"
+astroid = "==2.1.0"
+attrs = "==19.1.0"
+certifi = "==2018.11.29"
+cffi = "==1.12.3"
+chardet = "==3.0.4"
+colorama = "==0.4.1"
+constantly = "==15.1.0"
+hyperlink = "==19.0.0"
+idna = "==2.8"
+incremental = "==17.5.0"
+isort = "==4.3.4"
+lazy-object-proxy = "==1.3.1"
+mccabe = "==0.6.1"
+multidict = "==4.5.2"
+pycparser = "==2.19"
+pylint = "==2.2.2"
+pytz = "==2019.1"
+requests = "==2.21.0"
+six = "==1.12.0"
+tzlocal = "==1.5.1"
+urllib3 = "==1.24.1"
+websockets = "==6.0"
+wrapt = "==1.11.1"
+yarl = "==1.3.0"
+async_timeout = "==3.0.1"
+Automat = "==0.7.0"
+Deprecated = "==1.2.4"
+"discord.py" = "==1.1.1"
+PyGithub = "==1.43.5"
+PyHamcrest = "==1.9.0"
+PyJWT = "==1.7.1"
+PyNaCl = "==1.3.0"
+"zope.interface" = "==4.6.0"
 
 [requires]
 python_version = "3.7"
