--- a/Pipfile
+++ b/Pipfile
@@ -28,7 +28,7 @@ pytz = "==2019.1"
 requests = "==2.21.0"
 six = "==1.12.0"
 tzlocal = "==1.5.1"
-urllib3 = "==1.24.1"
+urllib3 = ">=1.24.2"
 websockets = "==6.0"
 wrapt = "==1.11.1"
 yarl = "==1.3.0"
